# logger-es-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
logger_es_cli/: __init__.py  __main__.py  cli_driver.py  dafaults.py
tests/: test_logger_escli.py
