[tool.poetry]
name = "logger-es-cli"
version = "0.1.0"
description = "CLI for sending logging to elasticsearch"
authors = ["Gustavo Freitas <gustavo@gmf-tech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
elasticsearch = "^7.13.0"
cmreshandler = {git = "https://github.com/sharkguto/python-elasticsearch-logger"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
