[tool.poetry]
name = "logger-es-cli"
version = "0.3.4"
description = "CLI for sending logging to elasticsearch"
authors = ["Gustavo Freitas <gustavo@gmf-tech.com>"]
readme = "README.md"
license = "MIT"
maintainers = ["Gustavo Freitas <gustavo@gmf-tech.com>"]
keywords = ['elasticsearch', 'kibana', 'logging', 'cli', 'gmf-tech']

[tool.poetry.dependencies]
python = "^3.7"
typer = { extras = ["all"], version = "^0.3.2" }
elasticsearch = "^7.13.1"
ujson = "^4.0.2"
python-dotenv = { extras = ["cli"], version = "^0.17.1" }
logger-es-handler = "^0.1.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
logger-es-cli = "logger_es_cli.cli_driver:app"
